# Game-of-Life

./: pyproject.toml
game/: __main__.py  cli.py  grid.py  patterns.py  views.py
